test/should_fail/inh_model_008.gm
model inh_model_008;

edge class A;
node class B extends A;
